posiGen_FullsendBox/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Email__c</fullName>
        <formula>PersonContact.Email</formula>
        <label>Account Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctManBE__c</fullName>
        <formula>if(Owner.Alias = &quot;kcock&quot;,&quot;James&quot;, 
if(Owner.Alias = &quot;sclaw&quot;,&quot;Kim&quot;, 
if(Owner.Alias = &quot;salle&quot;,&quot;Natosha&quot;, 
if(Owner.Alias = &quot;aglap&quot;,&quot;Dujuane&quot;, 
if(Owner.Alias = &quot;dhankton&quot;,&quot;Janisha&quot;, 
if(Owner.Alias = &quot;cwils&quot;,&quot;Shannon&quot;, 
if(Owner.Alias = &quot;jvolp&quot;,&quot;Honey&quot;, 
if(Owner.Alias = &quot;sdoug&quot;,&quot;Elizabeth&quot;, 

&quot;xOther&quot;))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Manager BE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acronym__c</fullName>
        <label>Acronym</label>
        <length>5</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Ambassador_Referral_URL__c</fullName>
        <description>TEMP - TO REMOVE WHEN AMBASSADOR PACKAGE IS AVAILABLE TO SUSCOSB FOR INTEGRATION</description>
        <label>Ambassador Referral URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Ambassador_Total_Earned__c</fullName>
        <description>TEMP - TO REMOVE WHEN AMBASSADOR PACKAGE IS AVAILABLE TO SUSCOSB FOR INTEGRATION</description>
        <label>Ambassador Total Earned</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Report_Date__c</fullName>
        <label>Annual Report Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_Status__c</fullName>
        <label>Application Status</label>
        <picklist>
            <picklistValues>
                <fullName>Adwarded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Asc_Default_Delivery_for_Purchase_Orders__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Asc Default Delivery for Purchase Orders</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ascent_Active__c</fullName>
        <label>Ascent Active</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ascent_Is_This_my_Organization_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ascent Is This my Organization Account?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ascent_Number_of_Locations__c</fullName>
        <label>Ascent Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ascent_Payment_Terms__c</fullName>
        <label>Ascent Payment Terms</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ascent_Precisio_Type__c</fullName>
        <label>Ascent Precisio Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ascent_Standard_Discount__c</fullName>
        <label>Ascent Standard Discount (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ascent_Taxes__c</fullName>
        <label>Ascent Taxes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Balance__c</fullName>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billing_CountyParish__c</fullName>
        <label>Billing County/Parish</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Parish_County__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Parish/County</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Municipality</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Billing Parish/County)</relationshipLabel>
        <relationshipName>Accounts_In_MunicipalityBilling</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Building_Permit_Number__c</fullName>
        <label>Building Permit Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Building_Permit_Submission__c</fullName>
        <inlineHelpText>What are the ways someone can apply for a Building Permit here?</inlineHelpText>
        <label>Building Permit Submission Methods</label>
        <picklist>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Person</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Accounts Obtained</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CaseSafeID__c</fullName>
        <formula>casesafeid(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CaseSafeID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClickToDialPresentedClid__c</fullName>
        <label>ClickToDialPresentedClid</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Applicant_Birthdate__c</fullName>
        <label>Co-Applicant Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Co_Applicant_SS__c</fullName>
        <label>Co-Applicant SS#</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Applicant__c</fullName>
        <inlineHelpText>Enter Co-Applicant Name if applicable</inlineHelpText>
        <label>Co-Applicant</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contractor_License_Number__c</fullName>
        <label>Contractor License Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count_of_Delinquent_Leases__c</fullName>
        <label>Count of Delinquent Leases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_of_Referrals__c</fullName>
        <label>Count of Referrals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_of_Referrees_On_Referrals__c</fullName>
        <label>Count of Referrees On Referrals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_of_Won_Referrees_on_Referrals__c</fullName>
        <label>Count of Won Referrees on Referrals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_APR__c</fullName>
        <description>APR for credit accounts.</description>
        <inlineHelpText>Enter the APR for our account with the supplier</inlineHelpText>
        <label>Credit APR</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Credit_line__c</fullName>
        <description>Credit line allowed with this supplier</description>
        <inlineHelpText>Enter the total credit available from the supplier</inlineHelpText>
        <label>Credit line</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Bill_Folder__c</fullName>
        <description>Link to Customer Bill Folder</description>
        <label>Customer Bill Folder</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Days_Delinquent__c</fullName>
        <label>LD Lease Days Delinquent</label>
        <summarizedField>LD_Lease__c.Days_Delinquent__c</summarizedField>
        <summaryForeignKey>LD_Lease__c.Account__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Declaration_of_Auth_of_Credit_Check__c</fullName>
        <label>Declaration of Auth of Credit Check</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Declaration_of_Residence__c</fullName>
        <label>Declaration of Residence</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Declaration_of_Separate_Ownership__c</fullName>
        <label>Declaration of Separate Ownership</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Default_Assignee_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Assignee User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts_User_Default_for</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Default_Assignee__c</fullName>
        <formula>Default_Assignee_User__r.ContactId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is associated with the Contact record.</inlineHelpText>
        <label>Default Assignee</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Earliest_Lease_Maturity_Date__c</fullName>
        <label>Earliest Lease Maturity Date</label>
        <summarizedField>Lease__c.Maturity_Date__c</summarizedField>
        <summaryFilterItems>
            <field>Lease__c.Maturity_Date__c</field>
            <operation>lessThan</operation>
            <value>1/1/2099</value>
        </summaryFilterItems>
        <summaryForeignKey>Lease__c.Account__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Electrical_Permit_Needed__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Is an electrical permit needed?  (Building permits are always needed)</inlineHelpText>
        <label>Electrical Permit Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Electrical_Permit_Number__c</fullName>
        <label>Electrical Permit Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Electronic_Signature_Allowed__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>If yes, that means they need the physical original form with a ink signature.  (Not a photocopy or DocuSign)</inlineHelpText>
        <label>Does NMICA Signature need to be wet ink?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employer_Contact_Name__c</fullName>
        <label>Employer Contact Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Phone__c</fullName>
        <label>Employer Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Equipment_Purchased__c</fullName>
        <label>Equipment</label>
        <picklist>
            <picklistValues>
                <fullName>Enphase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Growatt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Growatt 3kw</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kaco</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>First_Payment_Date__c</fullName>
        <label>First Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Handles_Tax_Assessments__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Does this government body handle tax assessments</inlineHelpText>
        <label>Handles Tax Assessments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Home_Phone_Area_Code__c</fullName>
        <formula>RIGHT(LEFT( PersonContact.HomePhone , 4),3)</formula>
        <label>Home Phone Area Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Phone_without_Area_Code__c</fullName>
        <formula>RIGHT( PersonContact.HomePhone , 8)</formula>
        <label>Home Phone without Area Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Import_Net_Meter_Install_Date__c</fullName>
        <label>Import Net Meter Install Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IntacctID__c</fullName>
        <label>Intacct Customer ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interconnect_Agreement__c</fullName>
        <label>Interconnect Agreement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Account_Delinquent__c</fullName>
        <formula>Loan_Days_Past_Due__c &gt; 30</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Account Delinquent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LD_Lease_Amount_Past_Due__c</fullName>
        <label>LD Lease Amount Past Due</label>
        <summarizedField>LD_Lease__c.Billed_Past_Due__c</summarizedField>
        <summaryFilterItems>
            <field>LD_Lease__c.Days_Delinquent__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>LD_Lease__c.Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LD_Lease_Total_Past_Due__c</fullName>
        <description>Roll-up summary of the total amount past due.</description>
        <label>LD Lease Total Past Due</label>
        <summarizedField>LD_Lease__c.Total_Past_Due__c</summarizedField>
        <summaryForeignKey>LD_Lease__c.Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Last_Call_Comment__c</fullName>
        <label>Last Call Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Last_Call_Type__c</fullName>
        <label>Last Call Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Birthdate__c</fullName>
        <label>Lead Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Created_Date__c</fullName>
        <label>Lead Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Numeric_ID__c</fullName>
        <externalId>true</externalId>
        <label>Lead Numeric ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Numeric_Id_Text__c</fullName>
        <description>Allows the Lead Numeric ID autonumber field to propagate to the Account object on Lead conversion</description>
        <label>Lead Numeric Id Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Referral_Source_Detail__c</fullName>
        <label>Lead Referral Source Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_SubSource__c</fullName>
        <label>Lead SubSource</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leads_in_County__c</fullName>
        <label>Leads in County</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lease__c</fullName>
        <label>Lease</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Leases_Late_Never_Paid__c</fullName>
        <description>This is from a field manually populated on the Lease</description>
        <label>Leases Late Never Paid</label>
        <summaryFilterItems>
            <field>Lease__c.Special_Reporting_Bucket__c</field>
            <operation>equals</operation>
            <value>Aged Never Paid</value>
        </summaryFilterItems>
        <summaryForeignKey>Lease__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Loan_Days_Past_Due__c</fullName>
        <description>Days Past Due (comes from the Loan with the Maximum days past due)</description>
        <inlineHelpText>Days Past Due (comes from the Loan with the Maximum days past due)</inlineHelpText>
        <label>Loan Days Past Due</label>
        <summarizedField>Lease__c.Days_Past_Due__c</summarizedField>
        <summaryForeignKey>Lease__c.Account__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>Baton Rouge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metairie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michoud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albany</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LocusSystemUploadFiles_LatestDPR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LocusSystemUploadFiles_LatestDPR</label>
        <referenceTo>Data_Processing_Request__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LocusUploadFile_CreatedOn__c</fullName>
        <formula>LocusSystemUploadFiles_LatestDPR__r.Actual_Completion__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LocusUploadFile_CreatedOn</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Locus_Registered_Date__c</fullName>
        <description>Date when this account was registered in Locus as a client</description>
        <inlineHelpText>Date when this account was registered in Locus as a client</inlineHelpText>
        <label>Locus Registered Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Locus_User_Id__c</fullName>
        <description>Locus client UserID for this account</description>
        <inlineHelpText>Locus client UserID for this account</inlineHelpText>
        <label>Locus User Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_County_Parish__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mailing County/Parish</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Municipality</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Mailing County/Parish)</relationshipLabel>
        <relationshipName>Accounts_In_Municipality</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Materials_offered__c</fullName>
        <inlineHelpText>Materials offered by our suppliers</inlineHelpText>
        <label>Materials offered</label>
        <picklist>
            <picklistValues>
                <fullName>Gun foam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weatherstripping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thermostats</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HVAC filters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fiberglass batts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blue jean batts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cotton batts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solar panels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inverters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Window A/C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caulk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chimney balloons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pool pumps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heat pump water heater</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Area_Code__c</fullName>
        <formula>RIGHT(LEFT( PersonContact.MobilePhone , 4),3)</formula>
        <label>Mobile Area Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_without_Area_Code__c</fullName>
        <formula>RIGHT( PersonContact.MobilePhone , 8)</formula>
        <label>Mobile without Area Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Multiple_Owner_Information__c</fullName>
        <inlineHelpText>Enter Additional Owner names, birth dates and social security numbers.</inlineHelpText>
        <label>Multiple Owner Information</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVM_Phone__c</fullName>
        <description>NewVoiceMedia click to dial Phone</description>
        <formula>IF( 
        LEN(  Phone  )&gt;0 , 
        HYPERLINK( &quot;/apex/NVMContactWorld__NVM_AgentUI_ClickToDialInitiator?number=&quot; &amp; 
                   SUBSTITUTE(Phone, &quot;+&quot;, &quot;%2B&quot;) &amp; 
                   &quot;&amp;oid=&quot; &amp; Id &amp; 
                   &quot;&amp;name=&quot; &amp;  Name &amp;
                   &quot;&amp;type=Account&quot;, 
                   Phone, &quot;nvm-clicktodial&quot;) 
                   &amp; &quot; &quot; &amp; IMAGE( &quot;../servlet/servlet.FileDownload?file=015A0000000FU0f&quot;, &quot;Dial&quot;), &quot;&quot;)</formula>
        <inlineHelpText>Click to dial Phone</inlineHelpText>
        <label>NVM Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVM_Phone1__c</fullName>
        <formula>IF(
LEN( Phone )&gt;0 ,
HYPERLINK( &quot;/apex/test?number=&quot; &amp;
SUBSTITUTE(Phone, &quot;+&quot;, &quot;%2B&quot;) &amp;
&quot;&amp;oid=&quot; &amp; Id &amp;
&quot;&amp;name=&quot; &amp; Name &amp;
&quot;&amp;type=Account&quot;,
Phone, &quot;nvm-clicktodial&quot;)
&amp; &quot; &quot; &amp; IMAGE( &quot;../servlet/servlet.FileDownload?file=015A0000000FU0f&quot;, &quot;Dial&quot;), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NVM_Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NetMeter_ICA_DocuSign_TemplateID_Multi__c</fullName>
        <description>Docusign Id for the multiple owner template for this Electricity Provider</description>
        <inlineHelpText>Docusign Id for the multiple owner template for this Electricity Provider</inlineHelpText>
        <label>NetMeter ICA DocuSign TemplateID Multi</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NetMeter_ICA_DocuSign_TemplateID__c</fullName>
        <description>Docusign Id for the single owner template for this Electricity Provider</description>
        <inlineHelpText>Docusign Id for the single owner document template for this Electricity Provider</inlineHelpText>
        <label>NetMeter ICA DocuSign TemplateID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Meter_Agreement__c</fullName>
        <label>Net Meter Agreement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Net_Meter_ICA_Fax_Submission__c</fullName>
        <label>Net Meter ICA Fax Submission</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Net_Meter_ICA_Submission_Email__c</fullName>
        <label>Net Meter ICA Submission Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Net_Meter_ICA_Submission_Methods__c</fullName>
        <inlineHelpText>Net Meter Interconnect Agreement Submission Methods</inlineHelpText>
        <label>Net Meter ICA Submission Methods</label>
        <picklist>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Person</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Net_Meter_ICA_Submission_Website__c</fullName>
        <label>Net Meter ICA Submission Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Net_Meter_Install_Date__c</fullName>
        <inlineHelpText>From Feasible Record</inlineHelpText>
        <label>Net Meter Install Date</label>
        <summarizedField>Opportunity.PVI_Net_Meter_Install_Date__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.PVI_Net_Meter_Install_Date__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Net_days__c</fullName>
        <inlineHelpText>Net days to payment.</inlineHelpText>
        <label>Net days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_of_LD_Leases_Delinquent__c</fullName>
        <inlineHelpText>Count of LD Leases Delinquent</inlineHelpText>
        <label># of LD Leases &gt; 30</label>
        <summaryFilterItems>
            <field>LD_Lease__c.Days_Delinquent__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>LD_Lease__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Num_of_Open_Cases__c</fullName>
        <description># of Open Cases for this account.  Will be populated by a trigger.</description>
        <label># of Open Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_of_Opps_Need_to_Board__c</fullName>
        <description>Based on the Opp Pipeline Stage</description>
        <label># of Opps Need to Board</label>
        <summaryFilterItems>
            <field>Opportunity.Pipeline_Stage__c</field>
            <operation>equals</operation>
            <value>Need to Board</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Num_of_Opps__c</fullName>
        <label># of Opps</label>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Open_Opportunities__c</fullName>
        <label>Number of Open Opportunities</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>notEqual</operation>
            <value>Closed Won, Not Qualified, Lost - Not Feasible, Lost - Layout Rejected, Lost - Cancelled After Install Started, Lost</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Opportunities__c</fullName>
        <label>Number of Opportunities</label>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Properties__c</fullName>
        <label># of Properties</label>
        <summaryForeignKey>Property__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Numeric_ID__c</fullName>
        <externalId>true</externalId>
        <label>Numeric ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Other_Referral_Source__c</fullName>
        <label>Other Referral Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outside_Company__c</fullName>
        <label>Outside Company</label>
        <picklist>
            <picklistValues>
                <fullName>Greener Dawn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RE Leads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lakeland Electric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CBM: Freedom Faith</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CBM: Operation Fuel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Owner_Email__c</fullName>
        <description>For Customer Community</description>
        <formula>Owner.Contact.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Name__c</fullName>
        <formula>Owner.FirstName + &apos; &apos; + Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Phone__c</fullName>
        <formula>NULLVALUE(Owner.Contact.Phone, Owner.Contact.MobilePhone )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Page_4_Date_Received__c</fullName>
        <label>Page 4 Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Page_4__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Page 4</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parish__c</fullName>
        <label>Parish</label>
        <picklist>
            <picklistValues>
                <fullName>Ascension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jefferson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lafourche</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Livingston</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orleans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>St. Bernard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>St. Charles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>St. John</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>St. Tammany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tangipahoa</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>